fix: wrong alignment in push token mfa login
We already applied the same classes as used in the token test component. The styles for the classes were just missing.

Refers to LINSELF-97

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -70,6 +70,24 @@ span.selectedToken {
   }
 }
 
+mat-spinner {
+  margin: 50px auto;
+}
+
+.center-content {
+  margin: 20px 0;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.center-text {
+  text-align: center;
+}
+
+.instruction {
+  margin: 1em 0;
+}
 
 .otpInput {
   display: flex;
